[project]
name = "lfm-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "fastapi>=0.139.2",
    "gunicorn>=26.0.0",
    "llama-cpp-python>=0.3.34",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "pytz>=2026.2",
    "requests>=2.34.2",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "uvicorn[standard]>=0.51.0",
]
